--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ body {
 .contact-info {
   font-style: normal;
 }
-. .contact {
+.contact {
   line-height: 1.5;
   letter-spacing: 0.02em;
   font-style: normal;
