--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,14 @@
 :root {
+  --primary-text-color: #434455;
+  --secondary-text-color: #2e2f42;
+  --primary-background-color: #ffffff;
 }
-
 body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
-  color: #434455;
+  color: var(--primary-text-color);
   font-weight: 400;
+  background-color: var(--primary-background-color);
 }
 .list {
   list-style: none;
@@ -19,7 +22,7 @@ body {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--secondary-text-color);
 }
 
 .description {
@@ -33,7 +36,7 @@ body {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  color: #2e2f42;
+  color: var(--secondary-text-color);
   text-align: center;
 }
 
@@ -52,13 +55,13 @@ body {
   color: #4d5ae5;
 }
 .logo-part {
-  color: #2e2f42;
+  color: var(--secondary-text-color);
 }
 .menu-item {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--secondary-text-color);
 }
 
 .menu-item:hover,
@@ -72,7 +75,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   font-style: normal;
-  color: #434455;
+  color: var(--primary-text-color);
 }
 
 .contact:hover,
@@ -171,10 +174,13 @@ body {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--secondary-text-color);
 }
 .work-desc {
   line-height: 1.5;
   letter-spacing: 0.02em;
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--primary-text-color);
 }
-/* =============/Portfolio============= */ ;
+/* =============/Portfolio============= */
